@@ -6,8 +6,6 @@ Open bugs/issues:
 
 For the coming release:
 
-- Better error message when neither edges nor unit cell parameters given.
-
 =====================================================
 
 Planned/requested features:
